# cyclingsimilarity.com

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-cicd.txt  requirements.txt
.github/workflows/: cicd.yaml
api/: Dockerfile  faiss_cyclists.index  learner.pkl  main.py  requirements.txt  vercel.json
notebooks/: 01 - Scrape PCS data.ipynb  02 - Compute embeddings.ipynb  03 - Create vector db.ipynb  AWS spielerei.ipynb  Create vector db.ipynb  spielerei.ipynb
scripts/: config.json  scrape.py  train.py
src/: aws.py  utils.py
tests/: test_aws.py  test_example.py  test_pcs.py
webapp/: Dockerfile  app.py  requirements.txt
